Update order functions
